# routa

./: AGENTS.md  Cargo.toml  README.md  api-contract.yaml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  sidebars.js  tsconfig.json
.github/workflows/: cli-release.yml  copilot-complete.yml  defense.yaml  entrix-release.yml  markdown-links.yaml  tauri-build.yml  tauri-release.yml
.husky/: post-commit
crates/routa-entrix/: Cargo.toml
crates/routa-entrix/src/: evidence.rs  file_budgets.rs  governance.rs  lib.rs  main.rs  model.rs  reporting.rs  review_context.rs  review_context_tree_sitter.rs  runner.rs  scoring.rs
crates/routa-entrix/src/review_context/: analysis.rs  model.rs  tests.rs
crates/routa-entrix/src/review_context/tree_sitter/: go.rs  java.rs  mod.rs  typescript.rs
docker/: Dockerfile.opencode-agent
docs/: ARCHITECTURE.md  release-guide.md
docs/adr/: README.md
drizzle/: 0011_add_parent_session_id.sql  0013_add_session_messages.sql
drizzle-sqlite/: 0009_add_parent_session_id.sql  0012_add_session_ids.sql  0014_add_session_messages.sql
e2e/: harness-settings-spec-sources.spec.ts  kanban-workspace-events.spec.ts
resources/: page-snapshot-registry.json
scripts/: check-api-parity.ts  check-markdown-links.sh  coauthor-stats.mts  copilot-complete-handler.ts  generate-snapshots.mjs  issue-enricher.ts  page-snapshot-fixtures.mjs  page-snapshot-lib.mjs  smart-check.sh  stage-routa-cli-npm.mjs  test-db.ts  validate-snapshots.mjs  validate-storybook-governance.mjs
specialists/: view-git-change.yaml
src/: instrumentation.ts
(+624 files in other folders)
